--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,7 +29,8 @@
     @import "demo/header";
     @import "demo/banner";
     @import "demo/shop";
-    @import "demo/sliders";
+    @import "demo/blog";
+    @import "demo/404";
 
 
     // Footer
@@ -56,6 +57,7 @@
     @import "demo/shortcodes/feature-box";
     @import "demo/shortcodes/headings";
     @import "demo/shortcodes/logos";
+    @import "demo/shortcodes/icon-box";
 
 
     // Extras
