--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,11 +12,10 @@
 
 //-------------------- Base Colors --------------------//
 
-$theme-color:                   #272727;
-$body-color:                    #272727;
-$heading-color:                 #272727;
-$third-color:                   #8c8c8c;
-$light:                         #272727;
+$theme-color:                 #272727;
+$body-color:                  #272727;
+$heading-color:               #272727;
+$light:                       #272727;
 
 
 
@@ -31,31 +30,19 @@ $heading-font:                  'Playfair Display', sans-serif;
 // Theme Colors
 $primary:                       $theme-color;
 $secondary:                     $heading-color;
-
-// Spacer
-$spacer: 1rem !default;
-$spacers: (
-  0: 0,
-  1: $spacer / 4,
-  2: $spacer / 2,
-  3: $spacer,
-  4: $spacer * 1.25,
-  5: $spacer * 2,
-) !default;
+$info:                        #3774e3;
 
 // Link
 $link-color:                    $heading-color;
-$link-decoration:				        none;
-$link-hover-color:				      $theme-color;
+$link-decoration:				none;
+$link-hover-color:				$theme-color;
 
-// Border
-// $border-radius:					        0.3125rem;
 
 // Font sizes
 $font-size-base:                1rem;
 
-$h1-font-size:                	4.06rem;
-$h2-font-size:                	2.8rem;
+$h1-font-size:                	4.0625rem;
+$h2-font-size:                	2.8175rem;
 $h3-font-size:                	1.5625rem;
 $h4-font-size:                	1.125rem;
 $h5-font-size:                	$font-size-base;
@@ -67,9 +54,9 @@ $line-height-sm:              	30 / 24;
 $line-height-lg:              	30 / 12;
 
 // Buttons
-$btn-padding-y:              	  1.31rem;
-$btn-padding-x:              	  2.625rem;
-$btn-font-size:              	  0.875rem;
+$btn-padding-y:              	1.31rem;
+$btn-padding-x:              	2.625rem;
+$btn-font-size:              	0.875rem;
 
 $btn-padding-y-lg:              1.5rem;
 $btn-padding-x-lg:              2.5rem;
@@ -80,8 +67,8 @@ $btn-border-radius:             0;
 
 // Forms
 $input-color:                   $heading-color;
-$input-border-color:            $theme-color;
-$input-border-width:			      0;
+$input-border-color:            #eaeaea;
+$input-border-width:			1px;
 $input-btn-focus-color-opacity: 1;
 
 $input-btn-padding-y:           1rem;
@@ -102,8 +89,8 @@ $input-focus-border-color:      $theme-color;
 
 $topbar-height:                 2.8125rem;
 $topbar-line-height:            2.75rem;
-$topbar-color:                  #adacac;
-$topbar-hover-color:            #7c7b7a;
+$topbar-color:                #adacac;
+$topbar-hover-color:          #7c7b7a;
 
 
 //-------------------- Header --------------------//
@@ -116,8 +103,8 @@ $sticky-header-height:          3.75rem;
 
 //-------------------- Primary Menu --------------------//
 
-$primary-menu-padding:					2.8125rem;
-$sticky-menu-padding:					  1.40625rem;
+$primary-menu-padding:			2.8125rem;
+$sticky-menu-padding:			1.40625rem;
 
 $primary-menu-font:             $body-font;
 $primary-menu-font-weight:      400;
@@ -127,13 +114,13 @@ $primary-menu-font-color:       #2f363a;
 $primary-menu-font-spacing:     0;
 
 // top Button
-$top-btn-font-size:        			0.875rem;
-$top-btn-font-color:       			#2f363a;
+$top-btn-font-size:        		0.875rem;
+$top-btn-font-color:       	  #2f363a;
 
 
 //-------------------- Section --------------------//
 
-$section-spacer:						    7.5rem;
+$section-spacer:				7.5rem;
 
 
 //-------------------- Social Icons Colors --------------------//
