--- a/scss/demo/_extras.scss
+++ b/scss/demo/_extras.scss
@@ -14,6 +14,9 @@
 /* ----------------------------------------------------------------
 	Add here extra styles for demo. Thanks!
 -----------------------------------------------------------------*/
+.container-fluid {
+	overflow: hidden;
+}
 
 .contact {
 	background-color: white;
@@ -25,224 +28,51 @@
 		margin-top: -13rem;
 		padding-bottom: 0;
 	}
-
-	.contact-email {
-		font-size: 2.25rem;
-		font-family: $heading-font;
-		font-weight: 400;
-		color: $primary;
-		line-height: 4rem;
-		margin-bottom: 0;
-	}
-
-	.contact-title {
-		font-weight: 400;
-		font-size: $h2-font-size;
-		font-family: $heading-font;
-		color: $heading-color;
-		margin-bottom: 1rem;
-	}
-}
-
-.error-section {
-	background-image: url(../images/404.png);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 79rem;
-	position: relative;
-	padding-top: 51rem;
-	padding-bottom: 7rem;
-
-	@include media-breakpoint-down(md) {
-		padding-top: 30rem;
-	}	
-}
-
-.error-404 {
-	h1 {
-		margin-bottom: 21.68rem;
-		line-height: 1.25;
-		margin-bottom: 1.25rem;
-	}
-}
-
-.breadcrumb {
-	color: white !important;
-	line-height: 1;
-	margin-top: $spacer * 2;
-	margin-bottom: $spacer * 2.5;
-
-	a {
-		display: block;
-		font-size: $h6-font-size;
-		font-family: $body-font;
-		font-weight: 600;
-		margin-right: 1rem;
-		opacity: 0.5;
-
-		&:hover {
-			color: $heading-color;
-			opacity: 1;
-		}
-	}
-
-	.dot {
-		background-color: $heading-color;
-		width: 3px;
-		height: 3px;
-		border-radius: 50%;
-		margin-right: 1rem;
-	}
-}
-
-.feedback-bg {
-	background-image: url(../images/Subscribe_bg.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	@include media-breakpoint-up(xl) {
-		height: 27.5rem;
-	}
-
-	.feedback {
-		input {
-			&::placeholder {
-				color: white;
-				font-size: 1rem;
-				font-family: $body-font;
-				opacity: 1;
-			}
-		}
-	}
 }
 
 .product_destails {
 	background-color: #f8f8f8;
 }
 
-.T_Shirt_one,
-  .T_Shirt_two {
-
-    img {
-      height: 100%;
-    }
-  }
-
-  .carousel-indicators {
-    button {
-      border: none !important;
-      width: 0.8rem;
-      height: 0.8rem !important;
-      display: block;
-      clear: both;
-      height: 0rem;
-      background: black;
-      border-radius: 50%;
-      margin: 0rem 1rem;
-			opacity: 0.5;
-    }
-		.active {
-			opacity: 1;
-		}
+.carousel-indicators {
+	button {
+		border: none !important;
+		width: 0.8rem;
+		height: 0.8rem !important;
+		display: block;
+		clear: both;
+		height: 0rem;
+		background: black;
+		border-radius: 50%;
+		margin: 0rem 1rem;
+		opacity: 0.5;
 	}
 
-	.ads-banner {
-		padding: 14rem 0rem;
-		background-image: url(../images/ads/ads.png);
-		background-repeat: no-repeat;
-		background-position: center center;
-		background-size: cover;
-	
-		h1 {
-			font-size: 6.5rem;
-		}
-	
-		h2 {
-			font-size: 3rem;
-		}
+	.active {
+		opacity: 1;
 	}
-
-	.ads {
-		padding: 5rem 0rem;
-
-  img {
-		@include media-breakpoint-up(lg) {
-			min-height: 37rem;
-		}
-
-		min-height: 20rem;
-  }
-
-  .ads_details {
-    top: 35%;
-
-    h1 {
-      font-size: 4.5rem;
-      font-family: "Playfair Display", serif;
-    }
-  }
-
-  .ads_right_img {
-    .ads_details {
-      padding-left: 10rem;
-    }
-  }
-
-	.ads_details,
-  .ads_right_img .ads_details {
-		@include media-breakpoint-up(xl) {
-			padding-left: 8.5rem;
-		}
-    padding-left: 4rem;
-  }
 }
 
-.about_text {
+.collection {
 	h1 {
-		font-size: 1.875rem;
+		font-size: 6.5rem;
+	}
+
+	h2 {
+		font-size: 3rem;
 	}
 }
 
-.Our_Advantages {
-	h1 {
-		font-size: 2.18rem;
-	}
 
-	ul {
-		li {
-			list-style: disc;
-		}
-	}
-}
-
-.history-title {
-	font-size: 1.85rem;
-}
-
-.history_number {
+.event-date {
 	@include media-breakpoint-up(md) {
 		display: flex;
 		align-items: center;
 		margin-left: -10rem;
 		width: 5%;
-		transform: rotate(
-	-88deg);
-	font-size: 7.4rem;
+		transform: rotate(-88deg);
+		font-size: 7.5rem;
 	}
 
 	font-size: $h1-font-size;
-}
-
-.about_banner_2 {
-	padding: 15rem 0rem;
-    background-image: url(../images/about/about_banner_bg.png);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
 }
