--- a/scss/demo/_shop.scss
+++ b/scss/demo/_shop.scss
@@ -96,14 +96,74 @@
 		margin-bottom: 1.25rem !important;
 	}
 
-	.onsale {
-		top: 5%;
-		left: 5%;
+	.onsale, .onnew {
+		position: absolute;
+		top: 1rem;
+		left: 1rem;
 		width: 3rem;
-    height: 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+		height: 3rem;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		color: $white;
+		border-radius: 50%;
+		font-size: 0.875rem;
+		font-weight: 600;
+	}
+
+	.onsale {
+		background-color: #e33737;
+	}
+
+	.onsale {
+		background-color: $white;
+		color: #3774e3;
+	}
+}
+
+
+
+.ads {
+    position: relative;
+    display: block;
+	margin-bottom: 1.5rem;
+
+    .ads-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+
+        .ads-bg-img {
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    .ads-body {
+        position: relative;
+        z-index: 1;
+    }
+
+	&.ads1 {
+		.ads-body {
+			padding: 14rem 4rem;
+		}
+	}
+
+	&.ads2 {
+		.ads-body {
+			padding: 14rem 4rem;
+			padding-bottom: 10rem;
+		}
 	}
 }
 
